- Changed Previous and Next to Previous Page and Next Page, per UI review.
* src/yelp-window.c:
- Changed Previous and Next to Previous Page and Next Page, per UI review.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Changed Previous and Next to Previous Page and Next Page, per UI review.
+
 2004-01-12  Richard Hult  <richard@imendio.com>
 
 	* src/yelp-toc-pager.c (menu_write_page): Set encoding to utf-8 in
