--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-13  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek translation.
+
 2004-01-13  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
