Update Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -8,14 +8,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2004-01-12 10:25+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-13 05:33+0100\n"
+"PO-Revision-Date: 2004-01-13 15:16+0100\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -320,14 +320,12 @@ msgid "/Go/"
 msgstr "/Pře_jít/"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "/Přejít/_Předchozí"
+msgstr "/Přejít/_Předchozí strana"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Přejít/_Následující"
+msgstr "/Přejít/_Následující strana"
 
 #: src/yelp-window.c:265
 msgid "/Go/_Contents"
