--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-01-13  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation.
