--- a/po/nl.po
+++ b/po/nl.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-13 05:33+0100\n"
 "PO-Revision-Date: 2004-01-05 16:55+0100\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -477,23 +477,23 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Article"
-msgstr ""
+msgstr "Artikel"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Audience"
-msgstr ""
+msgstr "Publiek"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Author"
-msgstr ""
+msgstr "Auteur"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografie"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Book"
-msgstr ""
+msgstr "Boek"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Caution"
@@ -513,11 +513,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Copyright"
-msgstr ""
+msgstr "Auteursrecht"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Date"
-msgstr ""
+msgstr "Datum"
 
 #: stylesheets/l10n.xml.in.h:30
 #, fuzzy
@@ -531,11 +531,11 @@ msgstr "Editors"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Example"
-msgstr ""
+msgstr "Voorbeeld"
 
 #: stylesheets/l10n.xml.in.h:34
 msgid "Figure"
@@ -547,7 +547,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:36
 msgid "Important"
-msgstr ""
+msgstr "Belangrijk"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Index"
@@ -559,7 +559,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Level"
-msgstr ""
+msgstr "Niveau"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Message Audience"
@@ -575,11 +575,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Note"
-msgstr ""
+msgstr "Opmerking"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Origin"
-msgstr ""
+msgstr "Afkomst"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Other Contributor"
@@ -599,7 +599,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Reference"
-msgstr ""
+msgstr "Verwijzing"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Reference Entry"
@@ -628,7 +628,7 @@ msgstr "Index"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Table"
-msgstr ""
+msgstr "Tabel"
 
 #: stylesheets/l10n.xml.in.h:58
 #, fuzzy
@@ -646,7 +646,7 @@ msgstr "Titelpagina"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "Warning"
-msgstr ""
+msgstr "Waarschuwing"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
