--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-13  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* POTFILES.in: Updated with a missing file.
+	* no.po: Updated.
+
 2004-01-13  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Kees van den Broek.
