--- a/po/no.po
+++ b/po/no.po
@@ -1,114 +1,102 @@
 # Norwegian (bokmål) translation of yelp.
-# Copyright © 2001-2002 Free Software Foundation, Inc.
-# Kjartan Maraas <kmaraas@gnome.org>, 2001-2002.
+# Copyright © 2001-2004 Free Software Foundation, Inc.
+# Kjartan Maraas <kmaraas@gnome.org>, 2001-2004.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2003-11-14 10:04+0100\n"
+"Project-Id-Version: yelp 2.5.2\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-13 22:33+0100\n"
+"PO-Revision-Date: 2004-01-13 22:43+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
-"Language-Team: Norsk (bokml) <no@li.org>\n"
+"Language-Team: Norsk (bokmål) <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Applikasjoner"
+msgstr "Panelprogrammer"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr "Applikasjoner"
+msgstr "Programmer"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Skrivebord"
+msgstr "Skrivebord"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Utvikling"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Utvikling"
+msgstr "Utviklingsmiljøer"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Utvikling"
+msgstr "Utviklingsverktøy"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Editors"
-msgstr "/R_ediger"
+msgstr "Redigeringsprogram"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Applikasjoner"
+msgstr "Utdanningsprogrammer"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Spill og underholdning"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Generelt"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Hjelpinnhold"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Applikasjoner"
+msgstr "Internettprogrammer"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Kjernerutiner"
+msgstr "Kjerner"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Applikasjoner"
+msgstr "Multimedieprogrammer"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Kontorstøtteprogrammer"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Applikasjoner"
+msgstr "Vitenskapelige programmer"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Sikkerhet"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Systemkall"
+msgstr "System"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Verktøy"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Applikasjoner"
+msgstr "Programmer for X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,15 +104,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "_Skill mellom små/store bokstaver"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Finn"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Finn: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -136,7 +124,7 @@ msgstr "_Forrige"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Bryt"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -146,49 +134,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp factory"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:424 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
 msgstr ""
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:439 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Ikke mer minne"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:616 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Tittelside"
 
 #: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
+#: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Innhold"
 
 #: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Ukjent"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Dokumentet «%s» eksisterer ikke"
+msgstr "Valgt dokument kunne ikke åpnes"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Dokumentet «%s» eksisterer ikke"
+msgstr "Valgt side kunne ikke finnes i dokumentet."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Dokumentet «%s» eksisterer ikke"
+msgstr "Innholdsfortegnelsen kunne ikke leses."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Dokumenter i Docbook SGML støttes ikke lengre."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Dokumentet «%s» eksisterer ikke"
+msgstr "Valgt fil kunne ikke leses."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -265,17 +251,16 @@ msgid "System Administration"
 msgstr "Systemadministrasjon"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dokumenter"
+msgstr "Dokument-URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI for dokument som skal prosesseres"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Pausetall er negativt."
 
 #: src/yelp-toc-pager.c:880
 msgid "Categories"
@@ -302,55 +287,48 @@ msgid "/_Edit"
 msgstr "/R_ediger"
 
 #: src/yelp-window.c:238
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Rediger/_Finn på siden..."
+msgstr "/Rediger/_Finn..."
 
 #: src/yelp-window.c:241
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Rediger/_Finn igjen"
+msgstr "/Rediger/Finn ne_ste"
 
 #: src/yelp-window.c:244
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Rediger/_Finn igjen"
+msgstr "/Rediger/Finn forri_ge"
 
 #: src/yelp-window.c:248
 msgid "/_Go"
-msgstr "/_Gå"
+msgstr "/_Naviger"
 
 #: src/yelp-window.c:249
 msgid "/Go/_Back"
-msgstr "/Gå/Til_bake"
+msgstr "/Naviger/Til_bake"
 
 #: src/yelp-window.c:252
 msgid "/Go/_Forward"
-msgstr "/Gå/_Fremover"
+msgstr "/Naviger/_Fremover"
 
 #: src/yelp-window.c:255
 msgid "/Go/_Home"
-msgstr "/Gå/_Hjem"
+msgstr "/Naviger/_Hjem"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Gå"
+msgstr "/Naviger/"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Forrige"
+msgstr "/Naviger/_Forrige side"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Gå/_Indeks"
+msgstr "/Naviger/_Neste side"
 
 #: src/yelp-window.c:265
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Innhold"
+msgstr "/Naviger/_Innhold"
 
 #: src/yelp-window.c:269
 msgid "/_Help"
@@ -424,140 +402,127 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Om denne bibliografien"
 
 #: stylesheets/l10n.xml.in.h:6
-#, fuzzy
 msgid "About This Book"
-msgstr "Om dette dokumentet"
+msgstr "Om denne boken"
 
 #: stylesheets/l10n.xml.in.h:7
-#, fuzzy
 msgid "About This Chapter"
-msgstr "Om dette dokumentet"
+msgstr "Om dette kapittelet"
 
 #: stylesheets/l10n.xml.in.h:8
-#, fuzzy
 msgid "About This Entry"
-msgstr "Om dette dokumentet"
+msgstr "Om denne oppføringen"
 
 #: stylesheets/l10n.xml.in.h:9
-#, fuzzy
 msgid "About This Glossary"
-msgstr "Om dette dokumentet"
+msgstr "Om denne ordboken"
 
 #: stylesheets/l10n.xml.in.h:10
-#, fuzzy
 msgid "About This Index"
-msgstr "Om dette dokumentet"
+msgstr "Om denne indeksen"
 
 #: stylesheets/l10n.xml.in.h:11
-#, fuzzy
 msgid "About This Part"
-msgstr "Om dette dokumentet"
+msgstr "Om denne delen"
 
 #: stylesheets/l10n.xml.in.h:12
-#, fuzzy
 msgid "About This Preface"
-msgstr "Om dette dokumentet"
+msgstr "Om denne innledningen"
 
 #: stylesheets/l10n.xml.in.h:13
-#, fuzzy
 msgid "About This Reference"
-msgstr "Om dette dokumentet"
+msgstr "Om denne referansen"
 
 #: stylesheets/l10n.xml.in.h:14
-#, fuzzy
 msgid "About This Section"
-msgstr "Om dette dokumentet"
+msgstr "Om denne seksjonen"
 
 #: stylesheets/l10n.xml.in.h:15
-#, fuzzy
 msgid "About This Set"
-msgstr "Om dette dokumentet"
+msgstr "Om dette settet"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "Affiliation"
-msgstr "Applikasjoner"
+msgstr "Tilhørighet"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Appendix"
-msgstr ""
+msgstr "Appendiks"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Article"
-msgstr ""
+msgstr "Artikkel"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Audience"
-msgstr ""
+msgstr "Publikum"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Author"
-msgstr ""
+msgstr "Forfatter"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografi"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Book"
-msgstr ""
+msgstr "Bok"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Caution"
-msgstr ""
+msgstr "Advarsel"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Chapter"
-msgstr ""
+msgstr "Kapittel"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Collaborator"
-msgstr ""
+msgstr "Medarbeider"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Colophon"
-msgstr ""
+msgstr "Kolofon"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Copyright"
-msgstr ""
+msgstr "Opphavsrett"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Date"
-msgstr ""
+msgstr "Dato"
 
 #: stylesheets/l10n.xml.in.h:30
-#, fuzzy
 msgid "Dedication"
-msgstr "Del"
+msgstr "Dedikasjon"
 
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
 msgid "Editor"
-msgstr "/R_ediger"
+msgstr "Redaktør"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Email"
-msgstr ""
+msgstr "E-post"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Example"
-msgstr ""
+msgstr "Eksempel"
 
 #: stylesheets/l10n.xml.in.h:34
 msgid "Figure"
-msgstr ""
+msgstr "Figur"
 
 #: stylesheets/l10n.xml.in.h:35
 msgid "Glossary"
-msgstr ""
+msgstr "Ordbok"
 
 #: stylesheets/l10n.xml.in.h:36
 msgid "Important"
-msgstr ""
+msgstr "Viktig"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Index"
@@ -565,97 +530,95 @@ msgstr "Indeks"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Legal Notice"
-msgstr ""
+msgstr "Juridisk notat"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Level"
-msgstr ""
+msgstr "Nivå"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Message Audience"
-msgstr ""
+msgstr "Publikum for melding"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Message Level"
-msgstr ""
+msgstr "Meldingsnivå"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Message Origin"
-msgstr ""
+msgstr "Meldingsopphav"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Note"
-msgstr ""
+msgstr "Merknad"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Origin"
-msgstr ""
+msgstr "Opphav"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Other Contributor"
-msgstr ""
+msgstr "Annen deltaker"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Part"
-msgstr ""
+msgstr "Del"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Preface"
-msgstr ""
+msgstr "Innledning"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Publisher"
-msgstr ""
+msgstr "Utgiver"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Reference"
-msgstr ""
+msgstr "Referanse"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Reference Entry"
-msgstr ""
+msgstr "Referanseoppføring"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Reference Section"
-msgstr ""
+msgstr "Referanseseksjon"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Revision History"
-msgstr ""
+msgstr "Revisjonshistorikk"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "See"
-msgstr ""
+msgstr "Se"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "See Also"
-msgstr ""
+msgstr "Se også"
 
 #: stylesheets/l10n.xml.in.h:56
-#, fuzzy
 msgid "Set Index"
-msgstr "Indeks"
+msgstr "Sett indeks"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Table"
-msgstr ""
+msgstr "Tabell"
 
 #: stylesheets/l10n.xml.in.h:58
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Hjelpinnhold"
+msgstr "Innholdsfortegnelse"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Tip"
-msgstr ""
+msgstr "Tips"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Title"
-msgstr ""
+msgstr "Tittel"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "Warning"
-msgstr ""
+msgstr "Advarsel"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -664,61 +627,3 @@ msgstr "Få hjelp med GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Hjelp"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Dokumentet «%s» eksisterer ikke"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Finn tekst i dokumentet:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Automatisk _tekstbryting"
-
-#~ msgid "Find text..."
-#~ msgstr "Finn tekst..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Treff på _hele ord"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Skill _mellom store/små bokstaver"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Søk etter:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Skrivebord"
-
-#~ msgid "Additional documents"
-#~ msgstr "Tilleggsdokumenter"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Manualsider"
-
-#~ msgid "Info Pages"
-#~ msgstr "Infosider"
-
-#~ msgid "Manual pages"
-#~ msgstr "Manualsider"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME er"
-
-#~ msgid "Free Software"
-#~ msgstr "Fri programvare"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Laster..."
-
-#~ msgid "Previous"
-#~ msgstr "Forrige"
-
-#~ msgid "Next"
-#~ msgstr "Neste"
-
-#~ msgid "Search in the index"
-#~ msgstr "Søk i indeksen"
