--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-14  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2004-01-13  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.in: Updated with a missing file.
