--- a/po/ga.po
+++ b/po/ga.po
@@ -5,6 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-01-12 18:01-0600\n"
 "PO-Revision-Date: 2003-05-01 18:50+0100\n"
 "Last-Translator: Paul Duffy <dubhthach@frink.nuigalway.ie>\n"
@@ -12,7 +13,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -643,42 +643,42 @@ msgstr "Faigh cabhair le haighaidh GNOME"
 msgid "Help"
 msgstr "Cabhair"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Cuardaigh téasc seo doiciméad:</b>"
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Cuardaigh téasc seo doiciméad:</b>"
 
-#~ msgid "Find text..."
-#~ msgstr "Cuardaigh téasc..."
+msgid "Find text..."
+msgstr "Cuardaigh téasc..."
 
-#~ msgid "_Search for:"
-#~ msgstr "C_uardaigh le haighaidh:"
+msgid "_Search for:"
+msgstr "C_uardaigh le haighaidh:"
 
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Deasc"
+msgid "GNOME - Desktop"
+msgstr "GNOME - Deasc"
 
-#~ msgid "Additional documents"
-#~ msgstr "Doiciméadí eile"
+msgid "Additional documents"
+msgstr "Doiciméadí eile"
 
-#~ msgid "Manual Pages"
-#~ msgstr "Leathanach as an Lámhleabhar"
+msgid "Manual Pages"
+msgstr "Leathanach as an Lámhleabhar"
 
-#~ msgid "Info Pages"
-#~ msgstr "Leathanach Eolas"
+msgid "Info Pages"
+msgstr "Leathanach Eolas"
 
-#~ msgid "Manual pages"
-#~ msgstr "leathanach as an Lámhleabhar "
+msgid "Manual pages"
+msgstr "leathanach as an Lámhleabhar "
 
-#~ msgid "GNOME is"
-#~ msgstr "Tá GNOME"
+msgid "GNOME is"
+msgstr "Tá GNOME"
 
-#~ msgid "Free Software"
-#~ msgstr "Clár Saoirse"
+msgid "Free Software"
+msgstr "Clár Saoirse"
 
-#~ msgid "(C)"
-#~ msgstr "(C)"
+msgid "(C)"
+msgstr "(C)"
 
 #, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "ag Lódáil..."
+msgid "Loading..&nbsp;"
+msgstr "ag Lódáil..."
 
-#~ msgid "Search in the index"
-#~ msgstr "Cuardaigh sa Innéacs"
+msgid "Search in the index"
+msgstr "Cuardaigh sa Innéacs"
