--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-17  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-01-17  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
