--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-17  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-titlepage.xsl:
+	* stylesheets/gettext.xsl:
+	- Small changes to pluralized headers in titlepage.
+
 2004-01-16  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-toc-pager.c:
