--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-18  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	* stylesheets/db2html-param.xsl:
+	- Nicer chunk depth determination.  Works decently well.
+
 2004-01-17  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-titlepage.xsl:
