- Stylistic changes to the TOC.
* stylesheets/db2html-division.xsl:
* stylesheets/db2html-html.xsl:
* stylesheets/db2html-toc.xsl:
- Stylistic changes to the TOC.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-19  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-division.xsl:
+	* stylesheets/db2html-html.xsl:
+	* stylesheets/db2html-toc.xsl:
+	- Stylistic changes to the TOC.
+
 2004-01-18  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
