--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-19 Hasbullah Bin Pit <sebol@my-penguin.org>
+
+	* ms.po: Updated Malay translation.
+
 2004-01-18  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
