--- a/po/ms.po
+++ b/po/ms.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
 "POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2004-01-04 17:18+0730\n"
+"PO-Revision-Date: 2004-01-20 20:19+0730\n"
 "Last-Translator: Hasbullah Bin Pit <sebol@ikhlas.com>\n"
 "Language-Team: Bahasa Melayu <gabai-penyumbang@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,8 @@ msgstr ""
 msgid "Applets"
 msgstr "Aplet"
 
-#: data/toc.xml.in.h:2 src/yelp-man.c:429
+#: data/toc.xml.in.h:2
+#: src/yelp-man.c:429
 msgid "Applications"
 msgstr "Aplikasi"
 
@@ -26,7 +27,8 @@ msgstr "Aplikasi"
 msgid "Desktop"
 msgstr "Desktop"
 
-#: data/toc.xml.in.h:4 src/yelp-man.c:434
+#: data/toc.xml.in.h:4
+#: src/yelp-man.c:434
 msgid "Development"
 msgstr "Pembangunan"
 
@@ -146,23 +148,23 @@ msgstr "Kehabisan memori"
 msgid "Titlepage"
 msgstr "Titlepage"
 
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
+#: src/yelp-db-pager.c:618
+#: stylesheets/l10n.xml.in.h:27
 msgid "Contents"
 msgstr "Kandungan"
 
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-db-pager.c:636
+#: stylesheets/l10n.xml.in.h:61
 msgid "Unknown"
 msgstr "Entah"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Dokumen '%s' tidak dapat dibuka"
+msgstr "Dokumen dipilih tidak dapat dibuka"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Halaman '%s' tidak dijumpai pada dokumen ini."
+msgstr "Halaman dipilih tidak dijumpai pada dokumen ini."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -173,9 +175,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "Dokumen SGML DocBook SGML tidak lagi disokong."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Jadual kandungan tak dapat dibaca."
+msgstr "Fail dipilih tak dapat dibaca."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -190,12 +191,19 @@ msgstr "Tak dapat mengaktifkan Yelp: '%s'"
 msgid "Could not open new window."
 msgstr "Tak dapat membuka tetingkap baru."
 
-#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
-#: src/yelp-man.c:401 src/yelp-man.c:412
+#: src/yelp-man.c:296
+#: src/yelp-man.c:317
+#: src/yelp-man.c:353
+#: src/yelp-man.c:385
+#: src/yelp-man.c:401
+#: src/yelp-man.c:412
 msgid "X11"
 msgstr "X11"
 
-#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
+#: src/yelp-man.c:301
+#: src/yelp-man.c:332
+#: src/yelp-man.c:390
+#: src/yelp-man.c:417
 msgid "OpenSSL"
 msgstr "OpenSSL"
 
@@ -320,14 +328,12 @@ msgid "/Go/"
 msgstr "/Pergi/"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "/Pergi/_Terdahulu"
+msgstr "/Pergi/Halaman _Terdahulu"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Pergi/_Berikutnya"
+msgstr "/Pergi/Halaman _Berikutnya"
 
 #: src/yelp-window.c:265
 msgid "/Go/_Contents"
@@ -347,7 +353,8 @@ msgstr "/Bantuan/_Perihal"
 msgid "Help Browser"
 msgstr "Pelungsur Bantuan"
 
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
+#: src/yelp-window.c:546
+#: stylesheets/l10n.xml.in.h:53
 msgid "Section"
 msgstr "Seksyen"
 
@@ -393,100 +400,99 @@ msgstr "Pelungsur Bantuan bagi GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Perihal Biblografi Ini"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Book"
-msgstr ""
+msgstr "Perihal Buku Ini"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Chapter"
-msgstr ""
+msgstr "Perihal Bab ini"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Entry"
-msgstr ""
+msgstr "Perihal Kemasukan Ini"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Glossary"
-msgstr ""
+msgstr "Perihal Glosari Ini"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Index"
-msgstr ""
+msgstr "Perihal Indeks Ini"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Part"
-msgstr ""
+msgstr "Perihal Bahagian Ini"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Preface"
-msgstr ""
+msgstr "Perihal Pendahuluan Ini"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Reference"
-msgstr ""
+msgstr "Perihal Rujukan Ini"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Section"
-msgstr ""
+msgstr "Perihal Seksyen Ini"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Set"
-msgstr ""
+msgstr "Perihal Set Ini"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplikasi"
+msgstr "Afiliasi"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Appendix"
-msgstr ""
+msgstr "Apendiks"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Article"
-msgstr ""
+msgstr "Artikel"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Audience"
-msgstr ""
+msgstr "Pendengar"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Author"
-msgstr ""
+msgstr "Penulis"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografi"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Book"
-msgstr ""
+msgstr "Buku"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Caution"
-msgstr ""
+msgstr "Amaran"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Chapter"
-msgstr ""
+msgstr "Bab"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Collaborator"
@@ -498,139 +504,135 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Copyright"
-msgstr ""
+msgstr "Hakcipta"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Date"
-msgstr ""
+msgstr "Tarikh"
 
 #: stylesheets/l10n.xml.in.h:30
-#, fuzzy
 msgid "Dedication"
-msgstr "Seksyen"
+msgstr "Dedikasi"
 
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
 msgid "Editor"
 msgstr "Editor"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Email"
-msgstr ""
+msgstr "Emel"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Example"
-msgstr ""
+msgstr "Contoh"
 
 #: stylesheets/l10n.xml.in.h:34
 msgid "Figure"
-msgstr ""
+msgstr "Gambarajah"
 
 #: stylesheets/l10n.xml.in.h:35
 msgid "Glossary"
-msgstr ""
+msgstr "Glosari"
 
 #: stylesheets/l10n.xml.in.h:36
 msgid "Important"
-msgstr ""
+msgstr "Penting"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Index"
-msgstr ""
+msgstr "Indeks"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Legal Notice"
-msgstr ""
+msgstr "Maklumat Perundangan"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Level"
-msgstr ""
+msgstr "Peringkat"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Message Audience"
-msgstr ""
+msgstr "Pengdengar Mesej"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Message Level"
-msgstr ""
+msgstr "Peringkat Mesej"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Message Origin"
-msgstr ""
+msgstr "Asal Mesej"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Note"
-msgstr ""
+msgstr "Nota"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Origin"
-msgstr ""
+msgstr "Asalan"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Other Contributor"
-msgstr ""
+msgstr "Penyumbang Lain"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Part"
-msgstr ""
+msgstr "Bahagian"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Preface"
-msgstr ""
+msgstr "Pendahuluan"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Publisher"
-msgstr ""
+msgstr "Penerbit"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Reference"
-msgstr ""
+msgstr "Rujukan"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Reference Entry"
-msgstr ""
+msgstr "Kemasukan Rujukan"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Reference Section"
-msgstr ""
+msgstr "Seksyen Rujukan"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Revision History"
-msgstr ""
+msgstr "Sejarah Rujukan"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "See"
-msgstr ""
+msgstr "Lihat"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "See Also"
-msgstr ""
+msgstr "Lihat Juga"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Set Index"
-msgstr ""
+msgstr "Set Indeks"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Table"
-msgstr ""
+msgstr "Jadual"
 
 #: stylesheets/l10n.xml.in.h:58
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Kandungan Bantuan"
+msgstr "Jadual Kandungan"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Tip"
-msgstr ""
+msgstr "Tip"
 
 #: stylesheets/l10n.xml.in.h:60
-#, fuzzy
 msgid "Title"
-msgstr "Titlepage"
+msgstr "Tajuk"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "Warning"
-msgstr ""
+msgstr "Amaran"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -639,3 +641,4 @@ msgstr "Mendapatkan bantuan bersama GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Bantuan"
+
