Translation updated by Kees van den Broek.
2004-01-21  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Kees van den Broek.

--- a/po/nl.po
+++ b/po/nl.po
@@ -514,9 +514,10 @@ msgstr "Toewijding"
 msgid "Editor"
 msgstr "Editor"
 
+#. GRUT modified this item
 #: stylesheets/l10n.xml.in.h:32
 msgid "Email"
-msgstr "Email"
+msgstr "E-mail"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Example"
