- Fixed ugly but benign typo.
* src/yelp-window.h:
- Fixed ugly but benign typo.

* test/testdoc1/testdoc1.xml:
- Implemented test for xref.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-21  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.h:
+	- Fixed ugly but benign typo.
+
+	* test/testdoc1/testdoc1.xml:
+	- Implemented test for xref.
+
+2004-01-21  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-window.c:
 	- Fixed annoying double-history thing with first page.  Again.
 	- Fixed history problem when loading anything external.
