include gtkwindow.h instead of gnome-app.h
2004-01-23  Mikael Hallendal  <micke@imendio.com>

	* src/yelp-window.h: include gtkwindow.h instead of gnome-app.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-23  Mikael Hallendal  <micke@imendio.com>
+
+	* src/yelp-window.h: include gtkwindow.h instead of gnome-app.h
+
 2004-01-22  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-uri.c:
