Don't generate temporary file for gnumeric help (Mdk bug #6341). Fix from
       * stylesheets/yelp-customization.xsl:
        Don't generate temporary file for gnumeric help (Mdk bug #6341).
        Fix from Shaun.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-27  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
+	* stylesheets/yelp-customization.xsl:
+	Don't generate temporary file for gnumeric help (Mdk bug #6341).
+	Fix from Shaun.
+
+2004-01-27  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
 	* autogen.sh:
 	Handle GNOME2_PATH variable.
 
